# rocrate2rohub

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml
src/rocrate2rohub/: __init__.py  cli.py  research_areas.tsv  rocrate2rohub.py  utils.py
